<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="147dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/ui_tabname_desert"
        android:orientation="horizontal"
        android:src="@drawable/dinner"
        app:srcCompat="@drawable/dinner" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="157dp"
        app:srcCompat="@drawable/dinner"
        android:id="@+id/imageView5" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="119dp"
        app:srcCompat="@drawable/dinner"
        android:id="@+id/imageView6" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:text="@string/pie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pie"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/iceCream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/iceCreame"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/cookie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cookie"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_weight="1" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pager" />

</LinearLayout>
