<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="132dp"
        android:id="@+id/frenchFriImg"
        android:contentDescription="@string/ui_tabname_appitizer"
        android:orientation="horizontal"
        android:src="@drawable/breakfast"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="134dp"
        app:srcCompat="@drawable/breakfast"
        android:id="@+id/cheeseCurdImg" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="162dp"
        app:srcCompat="@drawable/breakfast"
        android:id="@+id/nachoImg" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:text="@string/frenchFri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frenchFry"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/cheeseCurds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cheeseCurds"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Nachos"
            tools:text="@string/nachos"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_weight="1" />

    </RadioGroup>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pager" />


</LinearLayout>