<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="148dp"
        android:id="@+id/burgerImg"
        android:contentDescription="@string/ui_tabname_entree"
        android:orientation="horizontal"
        android:src="@drawable/lunch"
        app:srcCompat="@drawable/lunch" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="127dp"
        app:srcCompat="@drawable/lunch"
        android:id="@+id/sandwichImg" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="172dp"
        app:srcCompat="@drawable/lunch"
        android:id="@+id/macimg" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:text="RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/burger"
            tools:text="@string/burger"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/sandwich"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sandwich"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/macNcheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/macNcheese"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pager" />

</LinearLayout>